--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:e2e:watch": "vitest --config ./vitest.config.e2e.ts"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^10.2.10",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.1",
@@ -46,6 +46,7 @@
     "@swc/core": "^1.3.93",
     "@types/bcryptjs": "^2.4.4",
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^3.0.10",
     "@types/supertest": "^2.0.14",
